# ff6party

./: Cargo.toml  README.md  index-template.html  index.html
.github/workflows/: env-setup.sh  envsetup.sh  package.yml  rust.yml
scripts/: package.sh
src/: main.rs
static/: index.js  style.css
