[package]
name = "ff6party"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
anyhow = "1.0.38"
lazy_static = "1.4.0"
usb2snes = "0.1.0"
