[package]
name = "ff6party"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
anyhow = "1.0.38"
env_logger = "0.8.2"
handlebars = "3.5.2"
lazy_static = "1.4.0"
log = "0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.1", features = [ "time" ] }
usb2snes = "0.1.0"
